# BridgeIM

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
conf/: mysql.conf  redis.conf  server.conf  threadpool.conf
include/: public.hpp
include/common/: AppConfig.h
include/server/: chatserver.hpp  chatservice.hpp  lockqueue.h  logger.h
include/server/model/: friendrequestmodel.hpp  groupmodel.hpp  grouprequestmodel.hpp  requestresult.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  logger.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  friendrequestmodel.cpp  groupmodel.cpp  grouprequestmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
